modules/nsg/main.tf
resource "azurerm_network_security_group" "example" {
  for_each            = var.nsg
  name                = each.value.name
  location            = each.value.location
  resource_group_name = each.value.resource_group_name

  security_rule {
    name                       = "test123"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = ""
    destination_address_prefix = "10.0.0.0/8"
  }
}
resource "azurerm_subnet_network_security_group_association" "assoc" {
  for_each = azurerm_subnet.subnet

  subnet_id                 = each.value.id
  network_security_group_id = var.nsg_id
}
